Aggiunto solver randomico